# mcp-server-odoo

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTACION_COMPLETA_MCP_ODOO.md  INSTRUCCIONES_LAPTOP.md  README-MULTITENANT.md  README.md  claude_config_example.json  mcp-bridge-client.js  mcp-bridge.js  mcp-client.js  mcp_client_wrapper.py  mcp_server.py  pyproject.toml  requirements.txt  run.sh  server.py  server.py.backup  server_multitenant_fixed.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
mcp_server_odoo/: __init__.py  __main__.py  access_control.py  config.py  error_handling.py  error_sanitizer.py  formatters.py  logging_config.py  odoo_connection.py  performance.py  resources.py  server.py  tools.py  uri_schema.py
tests/: __init__.py  conftest.py  mcp_client_validation.sh  run_mcp_tests.sh  test_access_control.py  test_advanced_resources.py  test_authentication.py  test_basic_resources.py  test_caching.py  test_config.py  test_data_formatting.py  test_database_discovery.py  test_datetime_formatting.py  test_error_handling.py  test_error_sanitization_integration.py  test_error_sanitizer.py  test_fixes_integration.py  test_integration_e2e.py  test_mcp_client_validation.py  test_model_agnostic_example.py  test_odoo_connection_basic.py  test_package_structure.py  test_performance.py  test_resource_query_params.py  test_search_resources.py  test_search_smart_defaults.py  test_server_foundation.py  test_smart_fields.py  test_tools.py  test_transport_integration.py  test_uri_schema.py  test_write_operations.py  test_write_tools.py  test_xmlrpc_operations.py
tests/helpers/: __init__.py  mcp_model_manager.py  mcp_test_client.py  model_discovery.py  server_testing.py  test_mcp_simple.py  transport_client.py
